# Tuxun-RAG-Project

./: .gitignore  Milvus_tutorial.ipynb  create_database.ipynb  create_database.py  embedding.py  inference.py  main.py  pyproject.toml  requirements.txt  text_preprocess.py  体验.ipynb
data/: milvus_demo.db
raw_data/: SUMMARY.md  SUMMARY_cleaned.txt  图寻 App 更新日志.md  图寻 App 更新日志_cleaned.txt  图寻更新日志.md  图寻更新日志_cleaned.txt  新手入门说明.md  新手入门说明_cleaned.txt
raw_data/Plonk It 教程汉化/: 南极洲.md  南极洲_cleaned.txt  系列教程简介.md  系列教程简介_cleaned.txt
raw_data/Plonk It 教程汉化/亚洲/: 不丹.md  不丹_cleaned.txt  中华人民共和国.md  中华人民共和国_cleaned.txt  伊拉克.md  伊拉克_cleaned.txt  卡塔尔.md  卡塔尔_cleaned.txt  印度.md  印度_cleaned.txt  印度尼西亚.md  印度尼西亚_cleaned.txt  吉尔吉斯斯坦.md  吉尔吉斯斯坦_cleaned.txt  哈萨克斯坦.md  哈萨克斯坦_cleaned.txt  孟加拉国.md  孟加拉国_cleaned.txt  尼泊尔.md  尼泊尔_cleaned.txt  巴以地区.md  巴以地区_cleaned.txt  巴基斯坦.md  巴基斯坦_cleaned.txt  斯里兰卡.md  斯里兰卡_cleaned.txt  新加坡.md  新加坡_cleaned.txt  日本.md  日本_cleaned.txt  柬埔寨.md  柬埔寨_cleaned.txt  泰国.md  泰国_cleaned.txt  约旦.md  约旦_cleaned.txt  老挝.md  老挝_cleaned.txt  英属印度洋领地.md  英属印度洋领地_cleaned.txt  (+14 more)
raw_data/Plonk It 教程汉化/其他/: 中土世界.md  中土世界_cleaned.txt  跨国越境街景.md  跨国越境街景_cleaned.txt
raw_data/Plonk It 教程汉化/北美洲/: 加拿大.md  加拿大_cleaned.txt  危地马拉.md  危地马拉_cleaned.txt  哥斯达黎加.md  哥斯达黎加_cleaned.txt  圣皮埃尔和密克隆.md  圣皮埃尔和密克隆_cleaned.txt  墨西哥.md  墨西哥_cleaned.txt  多米尼加.md  多米尼加_cleaned.txt  巴拿马.md  巴拿马_cleaned.txt  格陵兰.md  格陵兰_cleaned.txt  百慕大.md  百慕大_cleaned.txt  马提尼克.md  马提尼克_cleaned.txt
raw_data/Plonk It 教程汉化/南美洲/: 乌拉圭.md  乌拉圭_cleaned.txt  南乔治亚和南桑威奇群岛.md  南乔治亚和南桑威奇群岛_cleaned.txt  厄瓜多尔.md  哥伦比亚.md  巴西.md  (+15 more)
(+310 files in other folders)
