[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "MoonHoplite",email = "ant_nebula@163.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pymilvus (>=2.5.4,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
