[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "MoonHoplite",email = "ant_nebula@163.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pymilvus (>=2.5.4,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "openai (>=1.62.0,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

